# vcp-iptv-manager

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml
scripts/: verify_m3u.sh
src/: config.rs  db.rs  lib.rs  main.rs  models.rs  scheduler.rs  task_center.rs  verifier.rs
src/api/: channels.rs  mod.rs  playitems.rs  pull.rs  pull_tasks.rs  pull_validate.rs  sources.rs
src/scraper/: m3u_source.rs  mod.rs
